[metadata]
name = qcodes
maintainer = QCoDeS Core Developers
maintainer_email = qcodes-support@microsoft.com
description = Python-based data acquisition framework developed by the Copenhagen / Delft / Sydney / Microsoft quantum computing consortium
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/QCoDeS/Qcodes
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
license = MIT
project_urls =
    Documentation = https://qcodes.github.io/Qcodes/
    Source = https://github.com/qcodes/qcodes
    Tracker = https://github.com/QCoDeS/Qcodes/issues
    Changelog = https://qcodes.github.io/Qcodes/changes/index.html

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
   numpy>=1.17.0
   pyvisa>=1.11.0, <1.12.0
   h5py>=2.10.0
   websockets>=7.0
   jsonschema>=3.0.0
   ruamel.yaml>=0.16.0,!=0.16.6
   wrapt>=1.10.4
   pandas>=1.0.0
   xarray>=0.18.0
   tabulate>=0.8.0
   tqdm>=4.32.2
   opencensus>=0.7.10, <0.9.0
   opencensus-ext-azure>=1.0.4, <2.0.0
   matplotlib>=3.3.0
   importlib-metadata>=3.6.0,<5.0.0; python_version < '3.8'
   typing_extensions>=3.10.0
   packaging>=20.0
   ipywidgets>=7.5.0
   broadbean>=0.9.1
   uncertainties>=3.1.4
   h5netcdf>=0.8.0
   setuptools>=48
   versioningit>=0.3.0

[options.package_data]
qcodes =
    monitor/dist/*
    monitor/dist/js/*
    monitor/dist/css/*
    configuration/*.json
    instrument/sims/*.yaml
    tests/dataset/fixtures/2018-01-17/*/*
    tests/delegate/data/*.yml
    tests/drivers/auxiliary_files/*
    py.typed
    dist/schemas/*
    dist/tests/station/*

[options.extras_require]
QtPlot = pyqtgraph>=0.11.0
Slack = slack-sdk>=3.4.2
ZurichInstruments = zhinst-qcodes>=0.1.1
test =
    pytest>=6.0.0
    PyVisa-sim>=0.4.0
    hypothesis>=5.49.0
    pytest-xdist>=2.0.0
    deepdiff>=5.0.2
    pytest-mock>=3.0.0
    pytest-rerunfailures>=5.0.0
    lxml>=4.3.0
    types_requests>=0.1.8
    types-setuptools>=57.0.0
    types-tabulate>=0.1.0
    Sphinx>=4.1.2

[options.entry_points]
console_scripts =
    qcodes-monitor = qcodes.monitor.monitor:main
