[options]
zip_safe = False
packages = find:

[options.package_data]
qcodes =
    monitor/dist/*
    monitor/dist/js/*
    monitor/dist/css/*
    configuration/*.json
    instrument/sims/*.yaml
    tests/dataset/fixtures/2018-01-17/*/*
    tests/delegate/data/*.yml
    tests/drivers/auxiliary_files/*
    py.typed
    dist/schemas/*
    dist/tests/station/*
