# note that only setuptools specific configuration is
# in this file. Std configuration as defined by pep621
# and configuration for other tools goes into pyproject.toml

[options]
zip_safe = False
packages = find:

[options.package_data]
qcodes =
    monitor/dist/*
    monitor/dist/js/*
    monitor/dist/css/*
    configuration/*.json
    instrument/sims/*.yaml
    tests/dataset/fixtures/data_2018_01_17/*/*
    tests/delegate/data/*.yml
    tests/drivers/auxiliary_files/*
    py.typed
    dist/schemas/*
    dist/tests/station/*
